# spectronix-fire

./: .gitignore  CMakeLists.txt  README.md  demo_fire.cpp  fire.cpp  fire.hpp  main.cpp  main.ipynb  main.py
notebooks/: stats.ipynb
python/: blob.py  data.py  train.py
test/: min-max_control.html  min-max_flames.html
